# politics-in-taluyers

./: .gitignore  README.md  apply_mistral.py  apply_openai.py  build_presence_matrix.py  challengers.txt  deliberations.md  deliberations.py  list_empty.py  ocrthis.py  presence.csv  prompt.txt  pyproject.toml  taluyers_crawler.py
data_taluyers/: index.csv
data_taluyers/json/: 20140908-CR-pour-affichage.json  20150202-PV-complet.json  20150316-CR-pour-affichage.json  20150427-PV-complet.json  20150601-CR-pour-affichage.json  20150706-PV-complet.json  20150831-PV-complet.json  20150928-PV-complet.json  20151102-PV-complet.json  20151214-PV-complet.json  20181126-pv-complet.json  20190114-pv-complet.json  CR-CM-19-juin.json  CR-Conseil-municipal-15-mai-PV-complet.json  PV-complet-20160118.json  PV-complet-20160229.json  PV-complet10.json  PV-complet11 copy.json  PV-complet12.json  PV-complet13.json  PV-complet14.json  PV-complet1601.json  PV-complet2.json  PV-complet4.json  PV-complet5.json  PV-complet6.json  PV-complet8.json  PV-complet9.json  Pv-complet1.json  compte-rendu-du-cm-du-9-novembre-2020 copy.json  conseil-municipal-avril-2014.json  conseil-municipal-du-08-juillet-2019.json  conseil-municipal-du-13-janvier-2020 copy.json  conseil-municipal-du-17-fevrier-2020.json  conseil-municipal-du-22-fevrier-2021 copy.json  conseil-municipal-du-22-novembre-2021 copy.json  conseil-municipal-du-25-novembre-2019.json  conseil-municipal-du-29-mars-2021.json  conseil-municipal-du-5-juillet-2021.json  conseil-municipal-du-6-septembre-2021 copy.json  (+54 more)
data_taluyers/txt/: .txt  (+61 more)
(+55 files in other folders)
